force-app/main/default/objects/Frecuencia_por_Categoria__mdt/Frecuencia_por_Categoria__mdt.object-meta.xml
<CustomObject>
    <label>Frecuencia por Categoria</label>
    <pluralLabel>Frecuencia por Categoria</pluralLabel>
</CustomObject>