force-app/main/default/objects/Frecuencia_por_Categoria__mdt/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KOL</fullName>
                <default>true</default>
                <label>KOL</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>