force-app/main/default/objects/Frecuencia_por_Categoria__mdt/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <label>Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epilepsia</fullName>
                <default>true</default>
                <label>Epilepsia</label>
            </value>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Metabolicos y Epilepsia</fullName>
            </value>
            <value>
                <fullName>Pediatricos</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>