force-app/main/default/objects/Frecuencia_por_Categoria__mdt/fields/Segmenta_Por__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Por__c</fullName>
    <label>Segmenta Por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adultos General Institucion</fullName>
                <default>true</default>
                <label>Adultos General Institucion</label>
            </value>
            <value>
                <fullName>Adultos General Comunidad</fullName>
            </value>
            <value>
                <fullName>Adultos Oncologia</fullName>
            </value>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Epilepsia</fullName>
            </value>
            <value>
                <fullName>Metabolicos y Epilepsia</fullName>
            </value>
            <value>
                <fullName>Pediatricos General</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>